# oddjob-gpupdate

./: .gitignore  AUTHOR  COPYING  Makefile.am  README.md  autogen  configure.ac  oddjob-gpupdate.spec
debian/: README.Debian  changelog  control  copyright  install  rules
src/: Makefile.am  buffer.c  buffer.h  common.h  gpupdate.c  gpupdatefor.in  gpupdateforme  handlers.h  mainloop.c  mainloop.h  oddjob-gpupdate.conf.5.in  oddjob-gpupdate.conf.in  oddjob.h  oddjob_dbus.c  oddjob_dbus.h  oddjobd-gpupdate.conf.5.in  oddjobd-gpupdate.conf.in  pam_oddjob_gpupdate.8.in  pam_oddjob_gpupdate.c  selinux.c  selinux.h  util.c  util.h
